--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -5508,7 +5508,7 @@ ul{
   #projects .row .col-sm-4 article {
     max-height: 335px;
     overflow: hidden; } }
-#navbar .material-icons {
+#navbar .navbar-responsive-collapse .material-icons {
   vertical-align: middle;
   font-size: 18px !important; }
 
@@ -6287,8 +6287,7 @@ fieldset[disabled] .btn-primary.active {
   .navbar-fixed-top, .navbar-fixed-bottom {
     border-radius: 0; } }
 .navbar-fixed-top {
-  top: 0;
-  border-width: 0 0 1px; }
+  top: 0; }
 
 .navbar-fixed-bottom {
   bottom: 0;
@@ -6586,7 +6585,7 @@ fieldset[disabled] .btn-primary.active {
       background-color: transparent; } }
 .navbar {
   background-color: #fff;
-  padding: 0 11px; }
+  padding: 0px 11px; }
 
 .navbar-brand {
   border-width: 0;
@@ -6648,7 +6647,7 @@ fieldset[disabled] .btn-primary.active {
     border-radius: 30px;
   */
   color: #fff;
-  height: 30px;
+  height: 60px;
   padding: 0;
   position: absolute;
   right: -30px;
@@ -6656,15 +6655,21 @@ fieldset[disabled] .btn-primary.active {
   width: 30px;
   z-index: 2; }
   .navbar-toggle .icon-bar {
-    background-color: #d2d0cd;
-    border: 1px dashed #fff;
+    background-color: white;
+    border: none;
     left: 50%;
     margin: -1px 0 0 -9px;
     position: absolute;
-    top: 50%;
-    width: 17px; }
+    top: 37%;
+    width: 17px;
+    color: #545454; }
+    .navbar-toggle .icon-bar .material-icons {
+      font-size: 26px !important; }
   .navbar-toggle .icon-chevron-up {
+    color: #545454;
     display: none; }
+    .navbar-toggle .icon-chevron-up .material-icons {
+      font-size: 26px !important; }
 
 .dropdown-menu {
   border-width: 0;
@@ -6685,11 +6690,16 @@ fieldset[disabled] .btn-primary.active {
     font-weight: normal; }
 
 @media screen and (max-width: 767px) {
+  .wrapper {
+    padding: 80px 11px 6px; }
+
   .navbar {
     margin-bottom: 0; }
 
   .navbar-brand {
     position: relative;
+    padding: 30px 0;
+    margin: 0;
     z-index: 2; }
 
   .navbar-responsive-collapse {
@@ -6802,8 +6812,8 @@ fieldset[disabled] .btn-primary.active {
     padding-right: 34px; } }
 /* =============================== CHANGE
 
- PASTED FROM HEADER.PHP MARCH 12th 2015 
- 
+ PASTED FROM HEADER.PHP MARCH 12th 2015
+
  =================================*/
 .navbar-toggle {
   background-color: transparent;
