--- a/greybox/sass/_navbar.scss
+++ b/greybox/sass/_navbar.scss
@@ -151,7 +151,7 @@
 
 .navbar-fixed-top {
   top: 0;
-  border-width: 0 0 1px;
+//  border-width: 0 0 1px;
 }
 
 .navbar-fixed-bottom {
@@ -570,7 +570,7 @@
 }
 .navbar {
   background-color: #fff;
-  padding: 0 11px;
+  padding: 0px 11px;
 }
 
 .navbar-brand {
@@ -642,7 +642,7 @@
   border-radius: 30px;
 */
   color: #fff;
-  height: 30px;
+  height: 60px;
   padding: 0;
   position: absolute;
   right: -30px;
@@ -650,16 +650,24 @@
   width: 30px;
   z-index: 2;
   .icon-bar {
-    background-color: #d2d0cd;
-    border: 1px dashed #fff;
+    background-color: white;
+    border: none;
     left: 50%;
     margin: -1px 0 0 -9px;
     position: absolute;
-    top: 50%;
+    top: 37%;
     width: 17px;
+    color:$textcolor;
+    .material-icons{
+      font-size:26px !important;
+    }
   }
   .icon-chevron-up {
+    color:$textcolor;
     display: none;
+    .material-icons{
+      font-size:26px !important;
+    }
   }
 }
 .dropdown-menu {
@@ -685,11 +693,14 @@
 }
 
 @media screen and (max-width: 767px) {
+  .wrapper{padding:80px 11px 6px;}
   .navbar {
     margin-bottom: 0;
   }
   .navbar-brand {
     position: relative;
+    padding: 30px 0;
+    margin:0;
     z-index: 2;
   }
   .navbar-responsive-collapse {
@@ -826,19 +837,19 @@
 }
 /* =============================== CHANGE
 
- PASTED FROM HEADER.PHP MARCH 12th 2015 
- 
+ PASTED FROM HEADER.PHP MARCH 12th 2015
+
  =================================*/
 .navbar-toggle{background-color: transparent;width: 45px;right:10px;margin-right: 0;padding: 0 0 0 20px;}
 .navbar-toggle img{width: 25px;height: auto;}
 			.navbar-toggle:focus{outline: none;}
-	        
+
 			.box-shadow-menu {position: relative;padding-left: 1.25em;text-indent: -9999px;text-decoration: none !important;}
 			.box-shadow-menu:before{content: "";position: absolute;left: 0;top: 0;width: 1.8em;height: 0.15em;background: #545454;box-shadow: 0 0.5em 0 0 #545454,0 1em 0 0 #545454;}
-	        
+
 			.border-menu{position: relative;padding-left: 1.25em;}
 			.border-menu:before {content: "";position: absolute;top: 0.25em;left: 0;width: 1em;height: 0.125em;border-top: 0.375em double #000;border-bottom: 0.125em solid #000;}
-	        
+
 			.gradient-menu {padding-left: 1.25em;position: relative;}
 			.gradient-menu:before {content: "";position: absolute;left: 0;top: 0px;bottom: 0.21em;width: 1.65em;background: linear-gradient(to bottom, #545454, #545454 20%, white 20%, white 40%, #545454 40%, #545454 60%, white 60%, white 80%, #545454 80%, #545454 100%);}
 			.navbar-toggle:hover .gradient-menu:before{background: linear-gradient(to bottom, black, black 20%, white 20%, white 40%, black 40%, black 60%, white 60%, white 80%, black 80%, black 100%);}
