--- a/greybox/sass/_typography.scss
+++ b/greybox/sass/_typography.scss
@@ -1,5 +1,5 @@
 //_typography.scss
-#navbar .material-icons{vertical-align: middle;font-size: 18px !important;}
+#navbar .navbar-responsive-collapse .material-icons{vertical-align: middle;font-size: 18px !important;}
 .tile-excerpt, .featured-info{
   h1,h2,h3,h4,h5,h6{
     margin:.25em 0;
