--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -124,7 +124,7 @@
       color: #d2d0cd;
     }
     + p {
-      margin-top: 18px;
+      margin-top: .25em;
     }
   }
 }
@@ -287,9 +287,9 @@
 		}
     .tile-excerpt, .featured-info{
       bottom: 18px;
-      margin-right: 25%;
+//      margin-right: 25%;
       padding-left: 15px;
-      padding-right: 0;
+      padding-right: 15px;
       position: absolute;
 			h1,h2,h3,h4,h5,h6{
 				margin:.25em 0;
@@ -297,7 +297,7 @@
     }
     .tile-title {
       margin-right: 0;
-			font-size:18px;
+			font-size:1.15em;
 			margin-top:.5em;
     }
 		.tile-hybrid .tile-title+p{
