--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -3388,67 +3388,6 @@ hr {
   clip: rect(0, 0, 0, 0);
   border: 0; }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  line-height: 1.1;
-  color: inherit; }
-
-h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
-  font-weight: normal;
-  line-height: 1;
-  color: #d2d0cd; }
-
-h1, h2, h3 {
-  margin-top: 18px;
-  margin-bottom: 9px; }
-
-h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
-  font-size: 65%; }
-
-h4, h5, h6 {
-  margin-top: 9px;
-  margin-bottom: 9px; }
-
-h4 small, h5 small, h6 small, h4 .small, h5 .small, h6 .small {
-  font-size: 75%; }
-
-h1, .h1 {
-  font-size: 36px; }
-
-h2, .h2 {
-  font-size: 30px; }
-
-h3, .h3 {
-  font-size: 24px; }
-
-h4, .h4 {
-  font-size: 18px; }
-
-h5, .h5 {
-  font-size: 14px; }
-
-h6, .h6 {
-  font-size: 12px; }
-
-p {
-  margin: 0 0 9px; }
-
-.lead {
-  margin-bottom: 18px;
-  font-size: 16px;
-  font-weight: 200;
-  line-height: 1.4; }
-
-@media (min-width: 768px) {
-  .lead {
-    font-size: 21px; } }
-small, .small {
-  font-size: 85%; }
-
-cite {
-  font-style: normal; }
-
 .text-muted {
   color: #d2d0cd; }
 
@@ -4940,7 +4879,7 @@ ul{
   display: block;
   content: ' ';
   height: 1px;
-  margin: 36px 8px;
+  margin: 36px 0px;
   overflow: hidden;
   width: 25%; }
 .module-related .module-title {
@@ -5184,7 +5123,7 @@ ul{
       line-height: 1;
       color: #d2d0cd; }
     .tile-hybrid .tile-title + p {
-      margin-top: 18px; }
+      margin-top: .25em; }
 
 .tile-people .tile-title {
   bottom: 24px;
@@ -5304,15 +5243,14 @@ ul{
       min-height: 588px; }
     .tile-hybrid .tile-excerpt, .tile-hybrid .featured-info {
       bottom: 18px;
-      margin-right: 25%;
       padding-left: 15px;
-      padding-right: 0;
+      padding-right: 15px;
       position: absolute; }
       .tile-hybrid .tile-excerpt h1, .tile-hybrid .tile-excerpt h2, .tile-hybrid .tile-excerpt h3, .tile-hybrid .tile-excerpt h4, .tile-hybrid .tile-excerpt h5, .tile-hybrid .tile-excerpt h6, .tile-hybrid .featured-info h1, .tile-hybrid .featured-info h2, .tile-hybrid .featured-info h3, .tile-hybrid .featured-info h4, .tile-hybrid .featured-info h5, .tile-hybrid .featured-info h6 {
         margin: .25em 0; }
     .tile-hybrid .tile-title {
       margin-right: 0;
-      font-size: 18px;
+      font-size: 1.15em;
       margin-top: .5em; }
     .tile-hybrid .tile-hybrid .tile-title + p {
       margin-top: 10px; }
@@ -5508,6 +5446,91 @@ ul{
   #projects .row .col-sm-4 article {
     max-height: 335px;
     overflow: hidden; } }
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit; }
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
+  font-weight: normal;
+  line-height: 1;
+  color: #d2d0cd; }
+
+h1, h2, h3 {
+  margin-top: 18px;
+  margin-bottom: 9px; }
+
+h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
+  font-size: 65%; }
+
+h4, h5, h6 {
+  margin-top: 9px;
+  margin-bottom: 9px; }
+
+h4 small, h5 small, h6 small, h4 .small, h5 .small, h6 .small {
+  font-size: 75%; }
+
+h1, .h1 {
+  font-size: 36px; }
+
+h2, .h2 {
+  font-size: 30px; }
+
+h3, .h3 {
+  font-size: 24px; }
+
+h4, .h4 {
+  font-size: 1.15em; }
+
+h5, .h5 {
+  font-size: 14px; }
+
+h6, .h6 {
+  font-size: 12px; }
+
+p {
+  margin: 0 0 9px; }
+
+@media (max-width: 768px) {
+  h1, .h1 {
+    font-size: 36px; }
+
+  h2, .h2 {
+    font-size: 30px; }
+
+  h3, .h3 {
+    font-size: 24px; }
+
+  .module-related .tile-title {
+    font-size: 1.25em; }
+
+  h4, .h4 {
+    font-size: 1.65em; }
+
+  h5, .h5 {
+    font-size: 14px; }
+
+  h6, .h6 {
+    font-size: 12px; }
+
+  .tile-header small {
+    font-size: 1em !important; } }
+.lead {
+  margin-bottom: 18px;
+  font-size: 16px;
+  font-weight: 200;
+  line-height: 1.4; }
+
+@media (min-width: 768px) {
+  .lead {
+    font-size: 21px; } }
+small, .small {
+  font-size: 85%; }
+
+cite {
+  font-style: normal; }
+
 #navbar .navbar-responsive-collapse .material-icons {
   vertical-align: middle;
   font-size: 18px !important; }
@@ -6691,14 +6714,15 @@ fieldset[disabled] .btn-primary.active {
 
 @media screen and (max-width: 767px) {
   .wrapper {
-    padding: 80px 11px 6px; }
+    padding: 79px 11px 6px; }
 
   .navbar {
     margin-bottom: 0; }
 
   .navbar-brand {
+    background-color: white;
     position: relative;
-    padding: 30px 0;
+    padding: 30px 80px 30px 0;
     margin: 0;
     z-index: 2; }
 
@@ -7127,7 +7151,7 @@ body.modal-open, .modal-open .navbar-fixed-top {
         opacity: 1; }
       .footer-para #back-top a i {
         border: 2px solid white;
-        width: 36px;
+        width: 38px;
         padding: 4px;
         border-radius: 30px; }
 
@@ -8320,5 +8344,13 @@ a span.hint, .social span a span.hint, .read-time a span.hint {
 a:hover span.hint, .social span a:hover span.hint, .read-time a:hover span.hint {
   display: inline-block;
   color: white; }
+
+@media (max-width: 768px) {
+  .social {
+    font-size: 1.25em;
+    text-align: center; }
+
+  .module-related:before, .social:before {
+    width: 100% !important; } }
 
 /*# sourceMappingURL=global.css.map */
