--- a/greybox/sass/_navbar.scss
+++ b/greybox/sass/_navbar.scss
@@ -695,13 +695,14 @@
 }
 
 @media screen and (max-width: 767px) {
-  .wrapper{padding:80px 11px 6px;}
+  .wrapper{padding:79px 11px 6px;}
   .navbar {
     margin-bottom: 0;
   }
   .navbar-brand {
+    background-color:white;
     position: relative;
-    padding: 30px 0;
+    padding: 30px 80px 30px 0;
     margin:0;
     z-index: 2;
   }
