--- a/greybox/sass/_prime.scss
+++ b/greybox/sass/_prime.scss
@@ -6,7 +6,8 @@ html {
 body {
   font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 1.2857142857142858;
+  line-height: 1.7857142857142858;
+  //1.4857142857142858 , 1.2857142857142858
   color: $textcolor ;
   background-color: $bodycolor;
 }
@@ -1284,7 +1285,7 @@ a.list-group-item {
 
 @media (min-width: 768px) {
   .wrapper {
-    padding: 81px 18px 6px;
+    padding: 75px 18px 6px;
     -webkit-transition: padding .2s ease;
     transition: padding .2s ease;
     &.open, &.in {
@@ -1361,6 +1362,7 @@ ul, ol {
 blockquote {
   border: 0;
   padding: 0;
+  font-weight:600;
   &:before {
     content: "â€œ";
   }
