--- a/greybox/sass/_typography.scss
+++ b/greybox/sass/_typography.scss
@@ -56,7 +56,7 @@ h6, .h6 {
 }
 
 p {
-  margin: 0 0 9px;
+  margin: 0 0 5px;
 }
 @media (max-width: 768px) {
   h1, .h1 {
@@ -65,6 +65,9 @@ p {
 
   h2, .h2 {
     font-size: 30px;
+  }
+  blockquote.h2{
+    font-weight:600;
   }
 
   h3, .h3 {
