--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -5017,21 +5017,6 @@ ul{
   /*unfinished*/
   .module-hero .module-overlay[class*="opaque-"] {
     color: white; } }
-<<<<<<< HEAD
-/*.edgeless [class*=' col-'], .edgeless .row [class*=' col-'], .edgeless .tile{
-	margin:0;
-	padding:0;
-	margin-bottom:0;
-	padding-left:0;
-	padding-right:0;
-}
-.edgeless{
-	.row{
-		margin-left:0;
-		margin-right:0;
-	}
-}*/
-=======
 .sidebar .list-unstyled {
   margin: 0; }
 
@@ -5045,7 +5030,19 @@ ul{
     max-width: 1080px; }
     .single-article .container .body {
       margin-top: 20px; } }
->>>>>>> origin/gh-pages
+/*.edgeless [class*=' col-'], .edgeless .row [class*=' col-'], .edgeless .tile{
+	margin:0;
+	padding:0;
+	margin-bottom:0;
+	padding-left:0;
+	padding-right:0;
+}
+.edgeless{
+	.row{
+		margin-left:0;
+		margin-right:0;
+	}
+}*/
 #inspiration p {
   margin: 0;
   clear: both; }
@@ -6237,6 +6234,35 @@ fieldset[disabled] .btn-primary.active {
     color: #fff;
     background-color: #ed2831;
     border-color: #d5121b; }
+
+.btn-floating {
+  color: #545454;
+  background: #fff;
+  width: 53px;
+  height: 53px;
+  border-radius: 25px;
+  vertical-align: middle;
+  cursor: pointer;
+  border: none;
+  display: block;
+  text-align: center;
+  font-size: 1.85em;
+  box-shadow: 0px 17px 10px -10px rgba(100, 100, 100, 0.2); }
+  .btn-floating i {
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+    vertical-align: middle;
+    line-height: 55px;
+    -webkit-font-smoothing: antialiased; }
+  .btn-floating .palette-inverse {
+    color: #fff; }
+  .btn-floating .btn-lrg {
+    font-size: 1.6em; }
+  .btn-floating:hover {
+    border: none;
+    box-shadow: 0px 27px 20px -20px rgba(0, 0, 0, 0.1);
+    transform: translate(0px, -5px); }
 
 .navbar {
   position: relative;
@@ -8419,5 +8445,3 @@ a:hover span.hint, .social span a:hover span.hint, .read-time a:hover span.hint 
 
   .module-related:before, .social:before {
     width: 100% !important; } }
-
-/*# sourceMappingURL=global.css.map */
