--- a/greybox/sass/_button.scss
+++ b/greybox/sass/_button.scss
@@ -199,3 +199,36 @@ fieldset[disabled] .btn-primary.active {
     border-color: #d5121b;
   }
 }
+.btn-floating{
+  color:$textcolor;
+  background:#fff;
+  width:53px;
+  height:53px;
+  border-radius:25px;
+  vertical-align:middle;
+  cursor:pointer;
+  border:none;
+  display:block;
+  text-align:center;
+  font-size:1.85em;
+  box-shadow: 0px 17px 10px -10px rgba(100,100,100,0.2);
+  i{
+    text-align:center;
+    display:inline-block;
+    text-decoration:none;
+    vertical-align:middle;
+    line-height:55px;
+    -webkit-font-smoothing:antialiased;
+  }
+  .palette-inverse{
+    color:#fff;
+  }
+  .btn-lrg{
+    font-size:1.6em;
+  }
+  &:hover{
+    border:none;
+    box-shadow: 0px 27px 20px -20px rgba(0,0,0,0.1);
+    transform: translate(0px, -5px);
+  }
+}
